# Release2GitCode

./: .dockerignore  .env.example  .flake8  .gitignore  ChangeLog.md  Dockerfile  README.md  WARNINGS_FIXED.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: CHANGELOG.md  QUICKSTART.md  README.md  VALIDATION_TESTS.md  release-to-gitcode.yml
app/: __init__.py  main.py
app/api/: auth.py  middleware.py  sync.py
app/config/: settings.py
app/core/: crypto.py  github.py  logger.py  security.py
app/exceptions/: __init__.py  errors.py
app/models/: schemas.py
app/services/: downloader.py  uploader.py
docs/: changelog.md
docs/workflows/: README.md  quickstart.md  validation.md
src/release2gitcode/: __init__.py
src/release2gitcode/cli/: __init__.py  __main__.py
src/release2gitcode/core/: __init__.py  config.py  crypto.py  errors.py  gitcode.py  github.py  http.py  logger.py  models.py  notifications.py  security.py  sync.py
src/release2gitcode/server/: __init__.py  app.py  main.py  middleware.py
tests/: test_api.py  test_api_key_generation.py  test_notifications.py  test_security.py  test_urls.py
